--- a/接口.md
+++ b/接口.md
@@ -11,5 +11,13 @@
   - user:账户名
   - token:空
   
+ ## 登出
+ 
+ - url: http://localhost:8080/user/login?code=admin&password=123456
+ 
+ - user:账户名
+ - token:实际token
+  
+  
  
   
