测试车辆添加和修改接口

--- a/接口.md
+++ b/接口.md
@@ -100,7 +100,7 @@
   }
   ```  
       
-## 创建注册
+## 用户注册
 
 - url:   http://localhost:9090/user/register?code=teclan&name=谭炳健&password=123456&id_card=547104&phone=110
 
@@ -134,3 +134,65 @@
    }
    ```  
   
+  ## 添加车辆
+  
+  - url:  
+  http://localhost:8080/vehicle/update?engine_no=11&frame=22&qualified_no=331&vehicle_license=44&license_plate=桂C77777&owner=1&id=7
+   
+   - 参数解释
+     
+     |字段|解释|备注|
+     |:---|:---|:---|
+     |engine_no|发动机编号||
+     |frame|车架号||
+     |qualified_no|合格证| |
+     |vehicle_license|行驶证| |
+     |license_plate|车牌号|后台会验证唯一性|
+     |owner|车主便会|可不传|
+     
+     
+      - header
+          - user:账户名
+          - token:实际token
+          
+   - 响应
+     
+     ``` 
+    {
+        "datas": "桂C77777",
+        "message": "添加成功"
+    }
+     ```  
+ ## 添加车辆
+   
+   - url:http://localhost:8080/vehicle/create?engine_no=1&frame=2&qualified_no=3&vehicle_license=4&license_plate=桂C77777&owner=1&id=7
+          
+       
+  - 参数解释
+          
+   |字段|解释|备注|
+ |:---|:---|:---|
+  |id|车辆记录id||
+ |engine_no|发动机编号||
+ |frame|车架号||
+ |qualified_no|合格证| |
+ |vehicle_license|行驶证| |
+ |license_plate|车牌号|后台会验证唯一性|
+ |owner|车主便会|可不传|
+          
+ - header
+     - user:账户名
+      - token:实际token
+               
+  - 响应
+          
+   ``` 
+ {
+     "datas": 7,
+     "message": "修改成功"
+ }
+ ```     
+     
+          
+          
+          
