修改违章记录表

--- a/接口文档.md
+++ b/接口文档.md
@@ -500,4 +500,80 @@
   }
   ``` 
   
-    
+ ## 违章类型查询
+ 
+ - url:http://localhost:8080/violationType/get
+ 
+ - 请求方式： GET
+ 
+ - 参数：无
+ 
+  - header
+          - user:账户名
+          - token:实际token   
+   
+  - 响应
+  
+  ``` 
+  {
+      "datas": [
+          {
+              "id": 1,
+              "type_name": "闯红灯"
+          },
+          {
+              "id": 2,
+              "type_name": "无证驾驶"
+          },
+          {
+              "id": 3,
+              "type_name": "超载或超员"
+          },
+          {
+              "id": 4,
+              "type_name": "使用伪造驾驶证"
+          },
+          {
+              "id": 5,
+              "type_name": "超速行驶"
+          },
+          {
+              "id": 6,
+              "type_name": "驾驶拼装或报废机动车"
+          },
+          {
+              "id": 7,
+              "type_name": "记满12分继续驾车"
+          },
+          {
+              "id": 8,
+              "type_name": "酒驾"
+          },
+          {
+              "id": 9,
+              "type_name": "醉驾"
+          },
+          {
+              "id": 10,
+              "type_name": "肇事后逃逸"
+          },
+          {
+              "id": 11,
+              "type_name": "未礼让行人"
+          },
+          {
+              "id": 12,
+              "type_name": "驾驶过程手持电话"
+          },
+          {
+              "id": 13,
+              "type_name": "未系安全带"
+          }
+      ],
+      "message": "查询成功"
+  }
+  ```    
+  
+  
+  
+     
