整理违章记录的增删改

--- a/接口文档.md
+++ b/接口文档.md
@@ -446,7 +446,7 @@
   
   - 请求方式：POST
   
-    - 参数解释
+  - 参数解释
        
      |字段|解释|备注|
      |:---|:---|:---|
@@ -575,5 +575,95 @@
   ```    
   
   
-  
+ ## 添加违章信息
+ 
+ - url:  http://localhost:8080/violation/create?license_plate=桂C00000&type=1&zone=广西桂林市七星区金鸡路&cause&deduction_score&deduction_amount&detention_day&police
+ 
+ - 请求方式：POST
+ 
+- 参数解释
+       
+     |字段|解释|备注|
+     |:---|:---|:---|
+     |license_plate|车牌号|必填|
+     |type|违章类型ID|必填|
+     |zone|地点区域|必填|
+     |cause|原因|非必填|
+     |deduction_score|所扣分数，一般不填，除非违章由现场警察发起，直接输入；电子信号类捕捉到的此项可不填，后续管理员处理违章信息时再确定|
+     |deduction_amount|所罚金额，一般不填，除非违章由现场警察发起，直接输入；电子信号类捕捉到的此项可不填，后续管理员处理违章信息时再确定|
+     |detention_day|拘留天数，一般不填，除非违章由现场警察发起，直接输入；电子信号类捕捉到的此项可不填，后续管理员处理违章信息时再确定|
+     |police|排序字段|必填|
      
+     - header
+         - user:账户名
+         - token:实际token
+         
+  - 响应   
+     
+    ``` 
+    {
+        "datas": "314087259702046720",
+        "message": "添加成功"
+    }
+    
+    ```
+    
+   ## 修改违章信息（处理违章）
+   
+   - url:  http://localhost:8080/violation/update?license_plate=桂C00000&type=1&zone=广西桂林市七星区金鸡路1号&cause&deduction_score=6&deduction_amount=200&detention_day=0&police&id=314091907494195200&punisher=teclan
+    
+   - 请求方式：POST
+    
+   - 参数解释
+          
+        |字段|解释|备注|
+        |:---|:---|:---|
+        |license_plate|车牌号|必填|
+        |type|违章类型ID|必填|
+        |zone|地点区域|必填|
+        |cause|原因|非必填|
+        |deduction_score|所扣分数|必填|
+        |deduction_amount|所罚金额|必填|
+        |detention_day|拘留天数|必填|
+        |police|现场警员|必填，没有的保留原值|
+        |punisher|处理人|必填，当前登录的账号|
+        |id|记录ID|必填|
+        
+        - header
+            - user:账户名
+            - token:实际token
+            
+     - 响应   
+        
+       ``` 
+       {
+           "datas": "314087259702046720",
+           "message": "操作成功"
+       }
+       
+       ``` 
+       
+  ## 删除违章记录
+  
+  - url: http://localhost:80/violation/delete?id=314091907494195200
+  
+  - 请求方式：POST
+      
+   - 参数解释
+            
+          |字段|解释|备注|
+          |:---|:---|:---|
+          |id|记录ID|必填|
+  
+   - header
+       - user:账户名
+       - token:实际token
+       
+   - 响应
+   
+   ``` 
+   {
+       "datas": 314091907494195200,
+       "message": "删除成功"
+   }
+   ```    
