新增违章归类统计接口

--- a/接口文档.md
+++ b/接口文档.md
@@ -750,3 +750,42 @@
        "message": "查询成功"
    }
    ```   
+   
+ ## 违章分析
+ 
+ -url :http://localhost:80/violation/analyse?endTime=2019-03&startTime=201901&licensePlate=xxx
+ 
+  - 请求方式：POST
+    
+    - 参数解释
+         
+       |字段|解释|备注|
+       |:---|:---|:---|
+       |startTime|开始时间|非必填，默认1970|
+       |endTime|结束时间|非必填，默认当前时间|
+       |licensePlate|车牌号|非必填，默认查询所有|
+       
+       - header
+           - user:账户名
+           - token:实际token
+           
+    - 响应 
+    
+  ``` 
+  {
+      "datas": [
+          {
+              "type": "2", // 违章类型ID
+              "type_name": "无证驾驶", //违章名称
+              "times": 1 // 次数
+          },
+          {
+              "type": "3",
+              "type_name": "超载或超员",
+              "times": 1
+          }
+      ],
+      "message": "查询成功"
+  }
+  
+  ``` 
