删除无用文件

--- a/接口文档.md
+++ b/接口文档.md
@@ -112,7 +112,7 @@
    
  ## 创建用户
   
-  - url:   http://localhost:9090/user/create?code=teclan&name=谭炳健&password=123456&id_card=547104&phone=110
+  - url:   http://localhost:9090/user/create?code=teclan&name=刘三金&password=123456&id_card=547104&phone=110
   
   -  请求方式： POST    
   
@@ -141,7 +141,7 @@
       
 ## 用户注册
 
-- url:   http://localhost:9090/user/register?code=teclan&name=谭炳健&password=123456&id_card=547104&phone=110
+- url:   http://localhost:9090/user/register?code=teclan&name=刘三金&password=123456&id_card=547104&phone=110
 
 > 同用户创建
   
