--- a/接口文档.md
+++ b/接口文档.md
@@ -836,40 +836,84 @@
    ```   
    
  ## 违章分析
- 
- -url :http://localhost:80/violation/analyse?endTime=2019-03&startTime=201901&licensePlate=xxx
- 
-  - 请求方式：POST
-    
-    - 参数解释
-         
-       |字段|解释|备注|
-       |:---|:---|:---|
-       |startTime|开始时间|非必填，默认1970|
-       |endTime|结束时间|非必填，默认当前时间|
-       |licensePlate|车牌号|非必填，默认查询所有|
        
-       - header
-           - user:账户名
-           - token:实际token
-           
-    - 响应 
-    
-  ``` 
-  {
-      "datas": [
-          {
-              "type": "2", // 违章类型ID
-              "type_name": "无证驾驶", //违章名称
-              "times": 1 // 次数
-          },
-          {
-              "type": "3",
-              "type_name": "超载或超员",
-              "times": 1
-          }
-      ],
-      "message": "查询成功"
-  }
+ -url :http://localhost:80/violation/analyse?endTime=2019-03&startTime=201901&licensePlate=xxx
+       
+- 请求方式：POST
+          
+- 参数解释
+               
+             |字段|解释|备注|
+             |:---|:---|:---|
+             |startTime|开始时间|非必填，默认1970|
+             |endTime|结束时间|非必填，默认当前时间|
+             |licensePlate|车牌号|非必填，默认查询所有|
+             
+             - header
+                 - user:账户名
+                 - token:实际token
+                 
+          - 响应 
+          
+        ``` 
+        {
+            "datas": [
+                {
+                    "type": "2", // 违章类型ID
+                    "type_name": "无证驾驶", //违章名称
+                    "times": 1 // 次数
+                },
+                {
+                    "type": "3",
+                    "type_name": "超载或超员",
+                    "times": 1
+                }
+            ],
+            "message": "查询成功"
+        }
+        
+        ``` 
+        
+  ## 推送报警
+   
+ - url : http://localhost:80/send/queue1
+  
+   
+  - 请求方式：POST
+      
+  - 参数
   
   ``` 
+  {
+  	"license_plate":"桂C88888",
+  	"type":1,
+  	"zone":"桂林电子科技大学"
+  	
+  }
+  ```
+  
+  - 参数解释
+  
+  ``` 
+   {
+    "license_plate":"车牌号",
+    "type":违章类型,
+    "zone":"区域名称"
+   }
+  ```
+           
+       
+         
+ - header
+ 
+     - user:账户名
+     - token:实际token
+     - Content-Type:application/json
+             
+ - 响应     
+``` 
+   {
+       "datas": "{\t\"license_plate\":\"桂C88888\",\t\"type\":1,\t\"zone\":\"桂林电子科技大学\"\t}",
+       "message": "推送成功"
+   }
+    ``` 
