'添加上诉和修改罚款缴付状态的接口'

--- a/接口文档.md
+++ b/接口文档.md
@@ -711,6 +711,9 @@
         |police|现场警员|必填，没有的保留原值|
         |punisher|处理人|必填，当前登录的账号|
         |id|记录ID|必填|
+        |pay|罚款缴付状态|必填，没有的保留原值|
+        |appeal|上诉状态|必填，没有的保留原值|
+        
         
         - header
             - user:账户名
@@ -781,9 +784,64 @@
          }
          
   ``` 
-              
+  
+  ## 上诉处理结果
+    
+    撤销后，将会发生消息给用户，并且撤销扣除的相应分数
        
- ## 删除违章记录
+       - url:  http://localhost:8080/violation/appeal?id=1
+        
+ - 请求方式：POST
+        
+    - 参数解释
+              
+            |字段|解释|备注|
+            |:---|:---|:---|
+            |id|记录ID|必填，列表查询时可获得|
+            
+            - header
+                - user:账户名
+                - token:实际token
+                
+   - 响应   
+            
+   ``` 
+           {
+               "datas": "314087259702046720",
+               "message": "上诉成功"
+           }
+           
+    ``` 
+              
+## 驳回上诉
+    
+    撤销后，将会发生消息给用户，并且撤销扣除的相应分数
+       
+       - url:  http://localhost:8080/violation/appeal?id=1
+        
+   - 请求方式：POST
+        
+    - 参数解释
+              
+            |字段|解释|备注|
+            |:---|:---|:---|
+            |id|记录ID|必填，列表查询时可获得|
+            
+            - header
+                - user:账户名
+                - token:实际token
+                
+   - 响应   
+            
+   ``` 
+           {
+               "datas": "314087259702046720",
+               "message": "上诉成功"
+           }
+           
+   ``` 
+           
+## 删除违章记录
   
   - url: http://localhost:80/violation/delete?id=314091907494195200
   
