'修改接口说明'

--- a/接口文档.md
+++ b/接口文档.md
@@ -759,7 +759,7 @@
  
  ## 撤销处理违章处理结果
   
-  撤销后，将会发生消息给用户，并且撤销扣除的相应分数
+  撤销后，将会发生消息给用户，并且撤销扣除的相应分数，如果违章信息用户已经发起上诉，则将上诉状态改成通过
      
      - url:  http://localhost:8080/violation/cancle?id=1
       
@@ -787,7 +787,7 @@
   
   ## 上诉处理结果
     
-    撤销后，将会发生消息给用户，并且撤销扣除的相应分数
+    对处理结果有异议的，可以上诉，管理员可以通过或者驳回
        
        - url:  http://localhost:8080/violation/appeal?id=1
         
@@ -815,7 +815,7 @@
               
 ## 驳回上诉
     
-    撤销后，将会发生消息给用户，并且撤销扣除的相应分数
+    驳回上诉请求
        
        - url:  http://localhost:8080/violation/appeal?id=1
         
