'修改接口说明'

--- a/接口文档.md
+++ b/接口文档.md
@@ -817,7 +817,7 @@
     
     驳回上诉请求
        
-       - url:  http://localhost:8080/violation/appeal?id=1
+       - url:  http://localhost:8080/violation/turn?id=1
         
    - 请求方式：POST
         
