--- a/接口文档.md
+++ b/接口文档.md
@@ -676,6 +676,7 @@
      |deduction_amount|所罚金额，一般不填，除非违章由现场警察发起，直接输入；电子信号类捕捉到的此项可不填，后续管理员处理违章信息时再确定|非必填|
      |detention_day|拘留天数，一般不填，除非违章由现场警察发起，直接输入；电子信号类捕捉到的此项可不填，后续管理员处理违章信息时再确定|非必填|
      |police|发起发单的人员的code|非必填|
+     |url|图片url,上传图片获得|如果上传了图片，则必传|
      
      - header
          - user:账户名
@@ -1181,3 +1182,52 @@
        "message": "推送成功"
    }
     ```     
+    
+ ## 上传违章图片
+ 
+ - url: http://localhost:8080/file/image/upload
+ 
+ - 请求方式：POST
+ 
+  - header
+  
+      - user:账户名
+      - token:实际token
+      - Content-Type:application/x-www-form-urlencoded
+    
+   - 参数
+     
+   |字段|描述|备注|
+   |:---|:---|:---|
+   |file|对应上传的图片的标识|必填|
+   |id|违章id| 如果有违章id则必传，没有违章id则不必传|
+   
+   ``` 
+   {
+       "code": 200,
+       "datas": {
+           "fileName": "327084496623251456_1.jpg",
+           "url": "/resource/327084496623251456_1.jpg"
+       },
+       "message": "上传成功"
+   }
+   ```
+
+## 查看违章图片
+ 
+ - url: http://localhost:8080/+url
+ 
+ 例如: http://localhost:8080/resource/327083989498343424_1.jpg
+ 
+ - 请求方式：GET
+ 
+  - header
+  
+      - 无
+    
+   - 参数
+     
+   |字段|描述|备注|
+   |:---|:---|:---|
+   |url|图片url,后台返回的标记|必填|
+   
