'超级管理员添加用户时可以指定角色，添加角色查询列表'

--- a/接口文档.md
+++ b/接口文档.md
@@ -112,7 +112,7 @@
    
  ## 创建用户
   
-  - url:   http://localhost:9090/user/create?code=teclan&name=刘三金&password=123456&id_card=547104&phone=110
+  - url:   http://localhost:9090/user/create?code=teclan&name=刘三金&password=123456&id_card=547104&phone=110&role=police
   
   -  请求方式： POST    
   
@@ -125,6 +125,7 @@
   |password|密码|前端确认密码输入|
   |id_card|身份证|后台会验证唯一性|
   |phone|电话|后台会验证唯一性|
+  |role|角色|通过角色查询接口获取，取 role 的值|
   
   - header
     - user:账户名
@@ -1230,4 +1231,49 @@
    |字段|描述|备注|
    |:---|:---|:---|
    |url|图片url,后台返回的标记|必填|
+
+
+## 角色查询
+ 
+ - url:http://localhost:8080/role/get
+ 
+ - 请求方式： GET
+ 
+ - 参数：无
+ 
+  - header
+          - user:账户名
+          - token:实际token   
    
+  - 响应
+  
+  ``` 
+  {
+      "code": 200,
+      "datas": [
+          {
+              "role": "admin",
+              "role_name": "管理员"
+          },
+          {
+              "role": "captain",
+              "role_name": "交警队长"
+          },
+          {
+              "role": "general",
+              "role_name": "普通用户"
+          },
+          {
+              "role": "police",
+              "role_name": "普通警察"
+          },
+          {
+              "role": "superadmin",
+              "role_name": "超级管理员"
+          }
+      ],
+      "message": "查询成功"
+  }
+  ```    
+  
+     
