'日志添加用户名称'

--- a/接口文档.md
+++ b/接口文档.md
@@ -1088,7 +1088,7 @@
 ## 查询日志
    
 
-- url : http://localhost:8080/message/get
+- url : http://localhost:8080/log/get
   
    
   - 请求方式：POST
@@ -1107,7 +1107,7 @@
 |sort|排序方式|非必填，默认 DESC|
 
 
-## 消息日志
+## 消息消息
    
 
 - url : http://localhost:8080/message/get
@@ -1129,27 +1129,6 @@
 |sort|排序方式|非必填，默认 DESC|
 
   
-## 查询日志
-   
-
-- url : http://localhost:8080/message/get
-  
-   
-  - 请求方式：POST
-      
-  
-  - 参数解释
- 
- |字段|描述|备注|
-|:---|:---|:---|
-|user_id|用户ID，不是code|普通用户必填，管理员非必填|
-|module|模块|userManarge（用户管理）或vehicleManage（车辆管理）或violationManage(违章管理)或messageManage(消息管理)| 非必填|
-|keywork|关键字，匹配描述字段|非必填|
-|currentPage|当前页|非必填，默认第一页|
-|pageSize|每页大小|非必填，默认20|
-|orderBy|排序字段|非必填，默认 create_time|
-|sort|排序方式|非必填，默认 DESC|
-
 
 ## 查询消息详情
 
